2006-05-25  Brian Bidulock  <bidulock@openss7.org>

	* src/drivers/rawip.c: added noinline in strategic places
	* src/drivers/udp.c: added noinline in strategic places

2006-05-24  Brian Bidulock  <bidulock@openss7.org>

	* src/drivers/udp.c: optimization from profiling

2006-05-23  Brian Bidulock  <bidulock@openss7.org>

	* src/drivers/rawip.c: working up performance tests of 2nd gen drivers
	* src/drivers/udp.c: working up performance tests of 2nd gen drivers
	* src/drivers/inet.c: FC4 does not export sysctl_ip_default_ttl
	* src/drivers/udp_hooks.h: FC4 does not export sysctl_ip_default_ttl
	* acinclude.m4: FC4 does not export sysctl_ip_default_ttl

2006-05-22  Brian Bidulock  <bidulock@openss7.org>

	* src/drivers/rawip.c: working up performance tests of 2nd gen drivers
	* src/drivers/udp.c: working up performance tests of 2nd gen drivers

2006-05-19  Brian Bidulock  <bidulock@openss7.org>

	* ChangeLog: updated
	* src/drivers/inet.c: minor corrections
	* src/drivers/lis.conf.in: avoid conflicts
	* src/drivers/rawip.c: working up RAWIP driver
	* src/drivers/udp.c: working up UDP driver
	* src/test/test-inet_raw.c: working up RAWIP driver
	* src/test/test-inet_sctp.c: spelling correction, rationalized
	* src/test/test-inet_tcp.c: spelling correction, rationalized
	* src/test/test-inet_udp.c: working up UDP driver
	* tests/Makefile.am: added test suites for 2nd get drivers
	* tests/testsuite-inet_raw2.at: added test suites for 2nd get drivers
	* tests/testsuite-inet_udp2.at: added test suites for 2nd get drivers
	* tests/testsuite.at: added test suites for 2nd get drivers
	* strinet.spec.in: added 2nd gen drivers
	* src/util/init/strinet: added 2nd gen drivers
	* src/util/init/strinet.sh: added 2nd gen drivers

2006-05-18  Brian Bidulock  <bidulock@openss7.org>

	* src/drivers/rawip.c: working up RAWIP driver
	* src/drivers/udp.c: rationalized to RAWIP driver
	* tests/testsuite-inet_raw2.at: added test suite for 2nd gen driver