@@ -1,3 +1,8 @@
+2006-05-31  Brian Bidulock  <bidulock@openss7.org>
+
+	* src/drivers/udp.c: started zero-copy architecture
+	* src/drivers/rawip.c: rationalized to 2nd gen udp driver
+
 2006-05-25  Brian Bidulock  <bidulock@openss7.org>
 
 	* src/drivers/rawip.c: added noinline in strategic places
